removed payload from POST brew
